<resources>
    <string name="app_name">App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="make_your_app_material">Make your App Material</string>
    <string name="go_ubiquitou_s">Go ubiquitou s</string>
    <string name="caspstone_make_own_app">Caspstone : Make own App</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
